# rosbag_toolkit

./: .gitignore  LICENSE  README.md
bag2image/: bag2image.py
bag2image/config/: config.yaml
bag2kitti/: bag2kitti.py
bag2kitti/config/: config.yaml
bag2mat/: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md  package.xml
bag2mat/config/: bag2mat_dict.yaml  bag2matpy_config.yaml  bag2matpy_seabed_config.yaml  bag2matpy_simplenav_uas.yaml  msg_dict.yaml  test_config.yaml
bag2mat/config/examples/: bag2matpy_vio_euroc.yaml  bag2matpy_vio_neufr.yaml  nuance_car.yaml  optitrack_config.yaml  seabed_config.yaml  simplenav_config.yaml  vio_config.yaml
bag2mat/scripts/: bag2matpy
bag2pandas/: .gitignore  LICENSE  README.md  bag2pandasdf.py
bag2pandas/config/: bag2pddf_config.yaml  bag2pddf_dict.yaml  bag2pddf_seabed_config.yaml
bag_correction/: bagTime2Timestamp.py  config.yaml
bagselector/: bag_selector.py  insert_camerainfo_topics.py
bagselector/config/: config.yaml  config_ir.yaml  config_ir_old.yaml  config_zed.yaml
downsample_bags/: downsample_bags.py
downsample_bags/config/: config.yaml
image2bag/: image2bag.py
image2bag/config/: config.yaml  config_ir.yaml  config_single.yaml
image_resize/: resize_image.py
