<package>

  <name>bag2mat</name>
  <version>1.0.0</version>
  <description>
  This package provides dataset parsing of rosbags to matlab format.
  </description>
  <maintainer email="pgeneva@udel.edu">Patrick Geneva</maintainer>
  <author>Patrick Geneva</author>

  <!-- Licensing -->
  <license>MIT</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rosbag</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospkg</run_depend>

</package>



